# smart-web-test-ai

./: .dockerignore  .env.example  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG.md  CLI.md  CONTRIBUTING.md  COVERAGE.md  CUCUMBER.md  DASHBOARD.md  DATABASE.md  DOCKER.md  Dockerfile  EMAIL.md  GITHUB_INTEGRATION.md  GITHUB_SETUP.md  GRAFANA.md  LEVELS_SUMMARY.txt  MODEL_SELECTOR.md  POSTMAN.md  QUICKSTART.md  RAG.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SESSION_SUMMARY.txt  SLACK.md  SPRINT_PLANNING.md  WEB_UI.md  advanced_rag.py  agent.py  api.py  cli_enhancements.py  cucumber_generator.py  dashboard.html  dashboard_analytics.py  database.py  docker-compose.yml  doctor.py  (+49 more)
.github/workflows/: tests.yml
examples/: README.md  cucumber_example.py  custom_test.py  grafana_example.py  rag_example.py
features/: environment.py  example.feature
grafana/provisioning/dashboards/: smart-test-dashboard.json
grafana/provisioning/datasources/: influxdb.yml
