[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-web-test-ai"
version = "1.4.1"
description = "AI-powered web testing with local LLMs (Ollama) and Playwright"
readme = "README.md"
license = { text = "AGPL-3.0-only" }
requires-python = ">=3.9"
authors = [{ name = "Pedro GM", email = "pedro13087@gmail.com" }]
keywords = ["testing", "ai", "ollama", "playwright", "automation", "qa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

# Core: enough for the database, CLI, doctor and --dry-run.
# Everything heavier is an optional extra (modules import it defensively).
dependencies = [
    "sqlalchemy>=2.0",
    "rich>=13.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
ai = [
    "langchain-ollama",
    "langchain-community",
    "playwright>=1.40",
    "ollama",
]
rag = ["chromadb"]
api = ["fastapi>=0.104", "uvicorn>=0.24", "pydantic>=2.0"]
ui = ["streamlit>=1.28"]
metrics = ["influxdb-client"]
analytics = ["scikit-learn>=1.3", "numpy>=1.24"]
test = ["pytest>=7.0", "pytest-cov>=4.0", "httpx>=0.24", "fastapi>=0.104",
        "pydantic>=2.0", "scikit-learn>=1.3", "numpy>=1.24", "playwright>=1.40"]
all = ["smart-web-test-ai[ai,rag,api,ui,metrics,analytics]"]

[project.scripts]
smart-test = "smart_test:main"
smart-test-doctor = "doctor:main"

[project.urls]
Homepage = "https://github.com/PedroGM80/smart-web-test-ai"
Issues = "https://github.com/PedroGM80/smart-web-test-ai/issues"

[tool.setuptools]
py-modules = [
    "agent", "advanced_rag", "api", "cli_enhancements", "cucumber_generator",
    "dashboard_analytics", "database", "doctor", "email_reports", "fake_agent",
    "github_integration", "knowledge_base", "metrics_collector",
    "model_benchmarker", "model_detector", "model_learner", "model_selector",
    "rag_optimizer", "repositories", "slack_integration", "smart_test",
    "stats_service",
]
